[gd_scene load_steps=3 format=3 uid="uid://beikuhxvqne6m"]

[ext_resource type="Script" uid="uid://dil2xcenj7xvu" path="res://UI/CraftingStuff/resource_need.gd" id="1_kip6j"]
[ext_resource type="Texture2D" uid="uid://bbr2emqn8o1et" path="res://Inventory/brown.png" id="2_vegbl"]

[node name="ResourceNeed" type="Panel"]
custom_minimum_size = Vector2(24, 24)
script = ExtResource("1_kip6j")

[node name="Sprite2D" type="Sprite2D" parent="."]
texture = ExtResource("2_vegbl")
centered = false

[node name="CenterContainer" type="CenterContainer" parent="."]
custom_minimum_size = Vector2(24, 24)
layout_mode = 0
offset_right = 24.0
offset_bottom = 24.0

[node name="Panel" type="Panel" parent="CenterContainer"]
self_modulate = Color(1, 1, 1, 0)
layout_mode = 2

[node name="ItemDisplay" type="Sprite2D" parent="CenterContainer/Panel"]

[node name="Label" type="Label" parent="CenterContainer/Panel"]
layout_mode = 0
offset_left = -6.0
offset_top = 8.0
offset_right = 13.0
offset_bottom = 31.0
scale = Vector2(0.5, 0.5)
text = "12"
horizontal_alignment = 1

[node name="NameLabel" type="Label" parent="CenterContainer/Panel"]
layout_mode = 0
offset_left = -8.0
offset_top = -16.0
offset_right = 72.0
offset_bottom = 7.0
scale = Vector2(0.2, 0.2)
text = "Hello"
horizontal_alignment = 1

[node name="CatergoryLabel" type="Label" parent="CenterContainer/Panel"]
layout_mode = 0
offset_left = -8.0
offset_top = -12.0
offset_right = 72.0
offset_bottom = 11.0
scale = Vector2(0.2, 0.2)
text = "Hello"
horizontal_alignment = 1
